test/spec_vectors/exports/ok/module_50.wat
(module (table 0 1 funcref) (export "a" (table 0)))