test/spec_vectors/exports/fail/module_63.wat
(module (table 0 funcref) (table 0 funcref) (export "a" (table 0)) (export "a" (table 1)))